syntax = "proto3";

package internalgrpc;
option go_package = "./;pb";

import "google/protobuf/empty.proto";

service Calendar {
  rpc CreateEvent (Event) returns (google.protobuf.Empty);
  rpc GetEvent(EventId) returns (Event);
  rpc UpdateEvent(Event) returns (google.protobuf.Empty);
  rpc DeleteEvent(EventId) returns (google.protobuf.Empty);
  rpc GetEvents(google.protobuf.Empty) returns (Events);
  rpc GetEventsOnDate(Date) returns (Events);
}

message Event {
	string uuid = 1;
	string title = 2;
	string user = 3;
	string date = 4;
	string begin = 5; // date time of event begin
	string end = 6;   // date time of event end
}

message EventId {
	string uuid = 1;
}

message Events {
  repeated Event events = 1;
}

message Date {
	string date = 1;
}
